--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
     "zendframework/zend-diactoros" : "^2.0",
      "zendframework/zend-httphandlerrunner" : "^1.0"
   },
+  
+  "require-dev": {
+    "phpunit/phpunit" : "^8.0",
+    "codeception/codeception": "^3.0"
+  },
 
   "autoload": {
     "psr-4": {
