--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -32,6 +32,6 @@ return PhpCsFixer\Config::create()
             ->exclude('tests/Fixtures')
             ->in(__DIR__ . '/src')
             ->in(__DIR__ . '/tests')
-	    ->in(__DIR__ . '/codeception/tests/acceptance'
+	    ->in(__DIR__ . '/codeception/tests/acceptance')
     )
 ;
