--- a/docker/config/php/Dockerfile
+++ b/docker/config/php/Dockerfile
@@ -14,4 +14,8 @@ RUN EXPECTED_SIGNATURE="$(wget -q -O - https://composer.github.io/installer.sig)
 
 RUN chmod +x /usr/local/bin/composer
 
+RUN pecl install xdebug-2.6.1
+RUN echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
+	&& echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini && docker-php-ext-enable xdebug
+
 RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
