--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "vlucas/phpdotenv": "^3.0",
     "nikic/fast-route" : "^1.3.0",
     "zendframework/zend-diactoros" : "^2.0",
-     "zendframework/zend-httphandlerrunner" : "^1.0"
+    "zendframework/zend-httphandlerrunner" : "^1.0"
   },
   
   "require-dev": {
     "phpunit/phpunit" : "^8.0",
-    "codeception/codeception": "^3.0"
+    "codeception/codeception": "^3.0",
+    "symfony/process": "^4.0"
   },
 
   "autoload": {
@@ -27,7 +28,8 @@
       	"tests/unit", 
       	"tests/integration",
       	"tests/acceptance"
-      ]
+      ],
+      "Lemundo\\Codeception\\Extensions\\": "codeception/extensions"
     }
   }
 }
