--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -30,9 +30,10 @@ return PhpCsFixer\Config::create()
     ->setFinder(
         PhpCsFixer\Finder::create()
             ->exclude('tests/Fixtures')
-	    ->in(__DIR__ . '/bin')
+            ->in(__DIR__ . '/bin')
             ->in(__DIR__ . '/src')
-            ->in(__DIR__ . '/tests')
-	        ->in(__DIR__ . '/codeception/tests/acceptance')
+            ->in(__DIR__ . '/tests/unit')
+            ->in(__DIR__ . '/tests/integration')
+            ->in(__DIR__ . '/codeception/tests/acceptance')
     )
 ;
