--- a/docker/config/nginx/default.conf
+++ b/docker/config/nginx/default.conf
@@ -8,11 +8,11 @@ server {
     charset utf-8;
 
     root /var/www/html/public;
-    index index.php;
+    index index.php index.html;
 
     location / {
         # try to serve file directly, fallback to index.php
-        try_files $uri $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ ^/index\.php(/|$) {
@@ -22,7 +22,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
-    
+
     # return 404 for all other php files not matching the front controller
     # this prevents access to other php files you don't want to be accessible.
     location ~ \.php$ {
