Selenium tests running

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -34,6 +34,8 @@ return PhpCsFixer\Config::create()
             ->in(__DIR__ . '/src')
             ->in(__DIR__ . '/tests/unit')
             ->in(__DIR__ . '/tests/integration')
-            ->in(__DIR__ . '/codeception/tests/acceptance')
+            ->in(__DIR__ . '/codeception/tests/ui')
+            ->in(__DIR__ . '/codeception/tests/api')
+            ->in(__DIR__ . '/codeception/extensions')
     )
 ;
