--- a/codeception/tests/ui.suite.yml
+++ b/codeception/tests/ui.suite.yml
@@ -9,7 +9,7 @@ class_name: WebGuy
 modules:
     enabled:
         - WebDriver:
-            url: http://app:8080
+            url: http://web:8000
             browser: 'chrome'
             window_size: 1024x768
             host: selenium
