--- a/docker/config/nginx/default.conf
+++ b/docker/config/nginx/default.conf
@@ -29,3 +29,42 @@ server {
         return 404;
     }
 }
+
+server {
+    listen 8000;
+
+    server_name _;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log debug;
+    charset utf-8;
+
+    root /var/www/html/public;
+    index index.php index.html;
+
+    location / {
+        # try to serve file directly, fallback to index.php
+        try_files $uri $uri/ /index.php$is_args$args @backend;
+    }
+
+    location @backend {
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://app:8080;
+    }
+
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass app:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+    }
+
+    # return 404 for all other php files not matching the front controller
+    # this prevents access to other php files you don't want to be accessible.
+    location ~ \.php$ {
+        return 404;
+    }
+}
